# Lobuddy

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  my_lobuddy  need_simple.md  now.md  plan.md  pyproject.toml  q.md  resume_updata.md  resume_updata_real.md  target.md  test_hitl_feature.py  ui-redesign-plan.md  update.md
app/: AGENTS.md  __init__.py  bootstrap.py  config.py  health.py  main.py
core/: AGENTS.md  __init__.py  pet_state_manager.py  time_format.py
reports/: baseline_metrics.json  llm_wiki_hermes_memory_lessons.md  nanobot_lobuddy_boundary_analysis.md
scripts/: diagnose_theme.py  functional_smoke_4_29.py  verify_p1.py
tests/: AGENTS.md  __init__.py  run_53_functional_tests.py  run_54_execution_tests.py  run_54_functional_tests.py  test_4291_features.py  test_52_integration.py  test_53_phase1_verification.py  test_54_execution_regression.py  test_ability_persistence.py  test_analyze_image_tool.py  test_bootstrap.py  test_companion_features.py  test_config_builder.py  test_config_overrides.py  test_conversation_summary.py  test_event_bus.py  test_execution_governance_hook.py  test_execution_intent.py  test_exit_wiring.py  test_focus_companion.py  test_hitl_approval.py  test_hitl_command_risk.py  test_hitl_tool_tracker.py  test_image_analysis_integration.py  test_image_analyzer.py  test_image_upload.py  test_image_validation.py  test_integration_phase1.py  test_memory_lint.py  test_memory_maintenance.py  test_memory_repository.py  test_memory_selector.py  test_memory_service.py  test_memory_write_boundary.py  test_nanobot_adapter.py  test_nanobot_adapter_execution_governance.py  test_nanobot_adapter_timeout.py  test_pet.py  test_repair_4_28.py  (+24 more)
ui/: AGENTS.md  __init__.py  asset_manager.py  history_window.py  hitl_approval_provider.py  hitl_confirmation_dialog.py  hotkey_manager.py  pet_settings_panel.py  pet_window.py  quick_action_menu.py  styles.py  (+8 more)
(+122 files in other folders)
